# customer-churn-predictor

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
data/: churn.csv
notebooks/: explore.ipynb
src/models/: churn_model.py
tests/: test_model.py
